se implento un limite de tamaño alos archivos que puede subir el usuario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.database-platform=${SPRING_DATASOURCE_DB}
 spring.jpa.show-sql=true
-
+#tamaño de los archivos que se pueden subir
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 #direccion de las fotos de los usuarios 
 file.upload-dir.fotos=src/main/resources/static/fotos
 file.upload-dir.actividades=src/main/resources/static/actividades
